--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
                             <h5 class="card-title text-center">ABOUT THE CONFERENCE</h5>
                             <div class="card-text text-justify">
 The Intelligent Computing and Technology Conference (ICTCON 2021) being jointly organized by Assam Science and Technology University Guwahati and Central Institute of Technology Kokrajhar during March 15-16, 2021.  The aim of the conference ICTCON 2021 is to provide a platform that brings together academicians, scholars,   engineers, industry people, and students to present their original work and exchange their ideas, experiences, tools, and techniques and applications in various domains of computing and technologies.  All the accepted and registered papers of the conference will be published in a conference proceeding with DOI, ISSN, ISBN number and indexed by Google Scholar.
-                       <p> For more information: <a href="https://drive.google.com/file/d/1T3PZHytywPre81SjLjLI7XWmdoa4163G/view?usp=sharing" > Click here</a></p>
+                       <br><p> For more information: <a href="https://drive.google.com/file/d/1T3PZHytywPre81SjLjLI7XWmdoa4163G/view?usp=sharing" > Click here</a></p>
 
 
 
-<br><br><br><br><br><br><br><br></div>
+<br><br><br><br><br></div>
                         </div>
                     </div>
                 </div>
@@ -301,9 +301,9 @@ The Intelligent Computing and Technology Conference (ICTCON 2021) being jointly 
                             <div class="card-text text-justify">Central Institute of Technology (CIT), Kokrajhar is situated in Kokrajhar District of Bodoland Territorial Region (BTR) in Assam. CIT has been established for the basic objective of fulfilling the aspirations of the Bodo People
                                 relating to their cultural identity, language, education and overall economic development of the region and to impart Bodo youths with requisite technological and vocational training to produce the required manpower to
                                 give the impetus to economic growth of this area and to integrate the Bodo People into the mainstream of Technical and Vocational Education. It is a Centrally Funded Institute under the Ministry of Human Resource Development,
-                                Government of India.The Institute was established on the 19th of December 2006.<br><br><br><br><br>
+                                Government of India.The Institute was established on the 19th of December 2006.<br>
                            
-                                <p>Visit <a href="https://www.cit.ac.in/" style="text-decoration:none">www.cit.ac.in</a></p>
+                                <p>Visit <a href="https://www.cit.ac.in/" style="text-decoration:none">www.cit.ac.in</a></p><br><br><br><br>
                             </div>
                         </div>
                     </div>
