--- a/registration.html
+++ b/registration.html
@@ -59,6 +59,15 @@
 
 
         <tr><td>International Author:</td><td> <b>20 USD</b></td></tr>
+    
+    <tr><td><br><br><br> <h3>Bank Account Details for Payment</h3></td></tr>
+        <tr><td>Name of Entity:</td><td> <b>Central Institute of Technology Kokrajhar</b></td></tr>
+        <tr><td>Savings Account No.:</td><td> <b>30495666063</b></td></tr>
+        <tr><td>Name of Bank:</td><td> <b>SBI</b></td></tr>
+        <tr><td>Name of Branch:</td><td> <b>North Kokrajhar, JD Road, PO & Dist-Kokrajhar, PIN-783370</b></td></tr>
+        <tr><td>IFS Code:</td><td> <b>SBIN0007379</b></td></tr>
+        <tr><td>MICR Code:</td><td> <b>783002303</b></td></tr>
+
 </table>
         </div>
     </section>
