--- a/submission.html
+++ b/submission.html
@@ -43,9 +43,8 @@
         <div class="container">
             <h4>Paper submission will be through EasyChair.</h4>
             <h4>EasyChair link: <span class="text-primary"><a href="https://easychair.org/conferences/?conf=ictcon2021 "> https://easychair.org/conferences/?conf=ictcon2021  </a></span></h4>
-            <h4>You can also follow the format link provided as follows.<span class="text-danger">Updating soon...</span></h4>
-            <h4>Latex format link: <span class="text-danger"><a href="https://www.overleaf.com/latex/templates/one-column-ieee-journal-article/ykctxqgxptrs">Single Column IEEE template</a></span></h4>
-            <h4>Word format link: <span class="text-danger">Updating soon...</span></h4>
+            <h4>You can also follow the format link provided as follows:</h4>            
+            <h4>Word format link: <span class="text-danger"><a href="https://tinyurl.com/7c2fxdya">Word Template</a></span></h4>
             <h5 class="my-5"><em>Maximum page length: 10</em></h5>
             <h2 class="my-5"><em>*Best Paper Award will be provided in each session* </em></h2>
         </div>
