--- a/dates.html
+++ b/dates.html
@@ -45,9 +45,9 @@
                 <h3>Last Date of Submission :</h3>
                 <div>8th March, 2021</div><br>
                 <h3>Notification of Acceptance: </h3>
-                <div>10th March, 2021</div><br>
-                <h3>Early Bird Registration: </h3>
-                <div>11th March, 2021</div><br>
+                <div>13th March, 2021</div><br>
+                <h3>Registration: </h3>
+                <div>14th March, 2021</div><br>
                 <h3>Date of Conference (Online Mode): </h3>
                 <div>15th-16th March, 2021</div>
             </div>
