--- a/registration.html
+++ b/registration.html
@@ -60,7 +60,7 @@
 
         <tr><td>International Author:</td><td> <b>20 USD</b></td></tr>
     
-    <tr><td><br><br><br> <h3>Bank Account Details for Payment</h3></td></tr>
+    <tr><td><br><br><br> <h4>Bank Account Details for Payment</h4></td></tr>
         <tr><td>Name of Entity:</td><td> <b>Central Institute of Technology Kokrajhar</b></td></tr>
         <tr><td>Savings Account No.:</td><td> <b>30495666063</b></td></tr>
         <tr><td>Name of Bank:</td><td> <b>SBI</b></td></tr>
@@ -71,6 +71,7 @@
 </table>
         </div>
     </section>
+    <h4>Registration link: <span class="text-danger"><a href="https://forms.gle/SJe1TJCDpLUVs2rT8">Registration Link</a></span></h4>
     <!-- JavaScript Bundle with Popper-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
