--- a/registration.html
+++ b/registration.html
@@ -71,7 +71,7 @@
 </table>
         </div>
     </section>
-    <h4>Registration link: <span class="text-danger"><a href="https://forms.gle/SJe1TJCDpLUVs2rT8">Registration Link</a></span></h4>
+    <h4 align="center">Registration link: <span class="text-danger"><a href="https://forms.gle/SJe1TJCDpLUVs2rT8">Registration Link</a></span></h4>
     <!-- JavaScript Bundle with Popper-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
