--- a/submission.html
+++ b/submission.html
@@ -39,14 +39,13 @@
     <section class="text-center p-5 bg-main-2 text-uppercase">
         <h1 class="page-title">Paper submission</h1>
     </section>
-    <section class="py-5">
+     <section class="py-5">
         <div class="container">
-            <h4>Paper submission will be through EasyChair.</h4>
-            <h4>EasyChair link: <span class="text-primary"><a href="https://easychair.org/conferences/?conf=ictcon2021 "> https://easychair.org/conferences/?conf=ictcon2021  </a></span></h4>
-            <h4>You can also follow the format link provided as follows:</h4>            
-            <h4>Word format link: <span class="text-danger"><a href="https://tinyurl.com/7c2fxdya">Word Template</a></span></h4>
-            <h5 class="my-5"><em>Maximum page length: 10</em></h5>
-            <h2 class="my-5"><em>*Best Paper Award will be provided in each session* </em></h2>
+            <h4 align="center">Paper submission will be through EasyChair.</h4>
+            <h4 align="center">EasyChair link: <span class="text-primary"><a href="https://easychair.org/conferences/?conf=ictcon2021 "> https://easychair.org/conferences/?conf=ictcon2021  </a></span></h4>
+            <h4 align="center">You can also follow the format link provided as follows:</h4>            
+            <h4 align="center">Word format link: <span class="text-danger"><a href="https://tinyurl.com/7c2fxdya">Word Template</a></span></h4>            
+            <h2 align="center" class="my-5" style="color:blue;"><em>*Best Paper Award will be provided in each session* </em></h2>
         </div>
     </section>
     <!-- JavaScript Bundle with Popper-->
